--- a/conf/config.ini
+++ b/conf/config.ini
@@ -22,7 +22,7 @@ RedisDbName = 2
 ValidEmail = http://localhost:8080?#/valid/email/
 SmtpHost = smtp.qq.com
 SmtpEmail = 3332366752@qq.com
-SmtpPass =  gxyabkczvboychgg
+SmtpPass =  
 
 
 [path]
@@ -31,10 +31,10 @@ ProductPath = /static/imgs/product/
 AvatarPath = /static/imgs/avatar/
 
 [qiniu]
-AccessKey = Cy1YDFU0krsVQbkT5CBbFZGed4uPiPgriP7krZ_A
-SerectKey = OB9XlPB8-ZzKRLRNoiNP-fqg35HzrNWbIgFmPQi6
+AccessKey = 
+SerectKey = 
 Bucket = ginmallzbh
-QiniuServer = t7b8f3uri.hd-bkt.clouddn.com
+QiniuServer =
 
 
 [es]
